# ml-spec-coursera

./: README.md  pyproject.toml
course1/week2/: C1_W2_Linear_Regression.ipynb  C1_W3_Logistic_Regression.ipynb
course2/: C2_W3_Assignment.ipynb  C2_W3_Assignment.ipynb:Zone.Identifier
